# shake-ansible

./: .travis.yml  LICENSE  README.md  shake-ansible.cabal
src/: Lib.hs
test/: Spec.hs
