name:                shake-ansible
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lpaulmp/shake-ansible#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Montero
maintainer:          lpaulmp@gmail.com
copyright:           2016 Paul Montero
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , shake >= 0.15 && < 0.16
  default-language:    Haskell2010

executable ansible
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shake-ansible
  default-language:    Haskell2010

test-suite shake-ansible-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shake-ansible
                     , hspec >= 2.2 && < 2.3
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lpaulmp/shake-ansible
